# playing_with_aws

./: .gitignore  MODULE.bazel  README.md
app/: .gitignore  BUILD
app/Demo/: ContentView.swift  DemoApp.swift  Info.plist
app/Demo.xcodeproj/: project.pbxproj
app/DemoTests/: DemoTests.swift
app/DynamicFramework/: Hello.swift  Info.plist
jenkins/dh-linux/: Jenkinsfile
jenkins/linux/: Jenkinsfile
jenkins/mac/: Jenkinsfile  create_sim.sh  delete_sim.sh  setup.sh  test_with_bazel.sh  test_with_xcode.sh
linux-dh-infra/modules/aws-linux/: LICENSE  ami.tf  resource_group.tf
linux-infra/: main.tf  terraform.tf  variables.tf
linux-infra/modules/aws-linux/: ami.tf  autoscaling_group.tf  iam.tf  launch_template.tf  security_group.tf  variables.tf
macos-dh-infra/: main.tf
macos-dh-infra/modules/aws-macos/: iam_ssm.tf  license.tf  locals.tf  resource_group.tf
packer/: image.pkr.hcl  variables.pkr.hcl
packer/config/: linux.pkrvars.hcl  linux_setup.sh  macos.pkrvars.hcl  macos_setup.sh
packer/linux/: image.pkr.hcl  setup.sh
terraform/linux-dh-infra/: main.tf  security_group.tf  terraform.tfvars.example  variables.tf
terraform/linux-infra/: main.tf  terraform.tfvars.example  variables.tf
terraform/macos-dh-infra/: main.tf  security_group.tf  terraform.tfvars.example  variables.tf
terraform/modules/aws-ec2-ssm-iam/: outputs.tf  variables.tf
terraform/modules/ec2-autoscaling-infra/: .terraform.lock.hcl  ami.tf  autoscaling_group.tf  iam.tf  launch_template.tf  license.tf  locals.tf  outputs.tf  resource_group.tf  security_group.tf  test.tftest.hcl  (+1 more)
(+9 files in other folders)
